--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+opm-porsol (2013.10-2~precise) precise; urgency=low
+
+  * New release
+
+ -- Arne Morten Kvarving <arne.morten.kvarving@sintef.no>  Mon, 14 Oct 2013 15:48:18 +0200
+
 opm-porsol (2013.03-3) precise; urgency=low
 
   * Disable LTO usage
