--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+opm-porsol (2015.04-1~precise) precise; urgency=medium
+
+  * Release new version
+
+ -- Arne Morten Kvarving <arne.morten.kvarving@sintef.no>  Fri, 24 Apr 2015 15:03:22 +0200
+
 opm-porsol (2013.10-2~precise) precise; urgency=low
 
   * New release
