mark module as deprecated

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+THIS MODULE IS DEPRECATED.
+The code is now integrated in the opm-upscaling module.
+
 Preparing the Sources
 =========================
 
